--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,26 @@ code {
   font-family: 'Jalnan';
   src: url('../public/fonts/Jalnan.ttf') format('truetype');
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family:
+    'Jalnan',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  color: var(--main-gray);
+}
