--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --main-gray: #707070;
+  --main-gray-light: #dddddd;
   --main-orange: #ed7432;
   --main-green: #98c355;
   --main-dark-green: #3a6452;
