--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -3,6 +3,12 @@
   border: 1px solid var(--main-gray);
   border-radius: 25px;
   max-width: 700px;
-  padding: 30px;
   display: inline-block;
+}
+
+.card > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 25px;
 }
