feat: Add chat room

--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -3,11 +3,11 @@
 }
 
 .logo:hover {
-  cursor: grab;
+  cursor: pointer;
 }
 
 .skku {
-  color: var(--main-dark-green);
+  color: var(--main-green-dark);
 }
 
 .bar {
